# Capstone-Project-Big-data

travel_pipeline/: .env  .env.example  Mermaid  README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml  pytest.ini
travel_pipeline/docker/mongo/: bootstrap.sh
travel_pipeline/src/travel_pipeline/: __init__.py  cli.py
travel_pipeline/src/travel_pipeline/aggregate/: __init__.py  pipeline.py
travel_pipeline/src/travel_pipeline/clean/: __init__.py  pipeline.py
travel_pipeline/src/travel_pipeline/core/: config.py  logging.py
travel_pipeline/src/travel_pipeline/db/: __init__.py  mongo.py
travel_pipeline/src/travel_pipeline/ingest/: __init__.py  pipeline.py
travel_pipeline/src/travel_pipeline/models/: __init__.py  flight.py
travel_pipeline/src/travel_pipeline/visuals/: __init__.py  app.py
travel_pipeline/tests/: test_aggregate.py  test_clean.py  test_ingest.py
